--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -7,7 +7,14 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
+
+# Define Variables for Environments
+variables:
+- name: DEV_ENVIRONMENT
+  value: dev
+- name: QA_ENVIRONMENT
+  value: qa  
 
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
@@ -20,35 +27,31 @@ stages:
     - job: TerraformValidateJob
       continueOnError: false
       steps:
-
-
-- task: PublishPipelineArtifact@1
+      - task: PublishPipelineArtifact@1
         displayName: Publish Artifacts
         inputs:
           targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
           artifact: 'terraform-manifests-out'
           publishLocation: 'pipeline'
-- task: TerraformInstaller@0
-displayname:Terraform Install
-  inputs:
-    terraformVersion: 'latest'
-
-
-- task: TerraformCLI@0
-    displayName: Terraform Init
-  inputs:
-    command: 'init'
-    backendType: 'azurerm'
-    backendServiceArm: 'Azure subscription 1(1fb774a7-5b13-45dc-a053-fd2935cac9f4)'
-    backendAzureRmSubscriptionId: 'Terraform-aks-azurerm-svc-con'
-    backendAzureRmResourceGroupName: 'terraform-storage-rg'
-    backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-    backendAzureRmContainerName: 'tfstatefiles'
-    backendAzureRmKey: 'aks-base.tfstate'
-    allowTelemetryCollection: true
-- task: TerraformCLI@0
-     displayName: Terraform Validate
-  inputs:
-    command: 'validate'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-    allowTelemetryCollection: false
+      - task: TerraformInstaller@0
+        displayName: Terraform Install
+        inputs:
+          terraformVersion: 'latest'
+      - task: TerraformCLI@0
+        displayName: Terraform Init
+        inputs:
+          command: 'init'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+          backendType: 'azurerm'
+          backendServiceArm: 'terraform-aks-azurerm-svc-con'
+          backendAzureRmResourceGroupName: 'terraform-storage-rg'
+          backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
+          backendAzureRmContainerName: 'tfstatefiles'
+          backendAzureRmKey: 'aks-base.tfstate'
+          allowTelemetryCollection: false
+      - task: TerraformCLI@0
+        displayName: Terraform Validate
+        inputs:
+          command: 'validate'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+          allowTelemetryCollection: false
