--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
@@ -36,21 +31,19 @@ stages:
       - task: TerraformInstaller@0
         displayName: Terraform Install
         inputs:
-          terraformVersion: 'latest'      
-     - task: TerraformCLI@0
-       displayName: Terraform Init
-       inputs:
-         command: 'init'
-         workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-         backendType: 'azurerm'
-         backendServiceArm: 'Azure subscription 1(1fb774a7-5b13-45dc-a053-fd2935cac9f4)'
-         backendAzureRmSubscriptionId: 'terraform-aks-azurerm-svc-con'
-         backendAzureRmResourceGroupName: 'terraform-storage-rg'
-         backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-         backendAzureRmContainerName: 'tfstatefiles'
-         backendAzureRmKey: 'aks-base.tfstate'
-         allowTelemetryCollection: false
-     
+          terraformVersion: 'latest'
+      - task: TerraformCLI@0
+        displayName: Terraform Init
+        inputs:
+          command: 'init'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+          backendType: 'azurerm'
+          backendServiceArm: 'terraform-aks-azurerm-svc-con'
+          backendAzureRmResourceGroupName: 'terraform-storage-rg'
+          backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
+          backendAzureRmContainerName: 'tfstatefiles'
+          backendAzureRmKey: 'aks-base.tfstate'
+          allowTelemetryCollection: false
       - task: TerraformCLI@0
         displayName: Terraform Validate
         inputs:
